// Vitest Snapshot v1

exports[`Options > resolve > react 1`] = `
{
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/react/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "tsx",
    "jsx",
  ],
  "extensionsRE": /\\\\\\.\\(tsx\\|jsx\\)\\$/,
  "importMode": "sync",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "react",
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;

exports[`Options > resolve > vue 1`] = `
{
  "dirs": [
    {
      "baseRoute": "",
      "dir": "examples/vue/src/pages",
    },
  ],
  "exclude": [],
  "extendRoute": undefined,
  "extensions": [
    "vue",
    "ts",
    "js",
  ],
  "extensionsRE": /\\\\\\.\\(vue\\|ts\\|js\\)\\$/,
  "importMode": "async",
  "nuxtStyle": false,
  "onClientGenerated": undefined,
  "onRoutesGenerated": undefined,
  "resolver": "vue",
  "routeBlockLang": "json5",
  "syncIndex": true,
}
`;
